# MPI

./: .gitignore  LICENSE  README.md  get_representation.py  prepare_dataset.py  pretrain.py  pyproject.toml  setup.py
mpi/: __init__.py
mpi/configs/: accelerators.py  datasets.py  models.py  tracking.py
mpi/datasets/: __init__.py  ego4d_hoi_dataset.py
mpi/models/: __init__.py  instantiate.py  materialize.py  mpi_model.py
mpi/models/baseline/: vcond.py  vdual.py  vdual_ori.py  vgen.py  vmvp.py  vr3m.py  vrn3m.py
mpi/models/util/: attention.py  extraction.py  loss_utils.py  ms_deform_attn.py  transformer.py
mpi/tools/: __init__.py  metrics.py  overwatch.py  utilities.py
mpi_evaluation/franka_kitchen/: .gitignore  README.MD  setup.py
mpi_evaluation/franka_kitchen/MPIEval/core/: hydra_launcher.py  train_loop.py
mpi_evaluation/franka_kitchen/MPIEval/core/config/: BC_config.yaml
mpi_evaluation/franka_kitchen/MPIEval/core/config/hydra/output/: local.yaml
mpi_evaluation/franka_kitchen/MPIEval/utils/: behavior_cloning.py  fc_network.py  gym_env.py  logger.py  obs_wrappers.py  policy.py  sampling.py
mpi_evaluation/franka_kitchen/scripts/: eval_mpi-small_knob1-on.sh
mpi_evaluation/referring_grounding/: adapter.py  eval_refer.sh  evaluate_refer.py  harness.py  preprocessing.py
mpi_evaluation/referring_grounding/util/: __init__.py  overwatch.py  random.py
